day-15/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-runAsNonRoot
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
          - giropops
    validate:
      message: "Root? Isso nao pode amigao!"
      pattern:
        spec:
          containers:
          - securityContext:
              runAsNonRoot: true
